<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/title"
            android:textColor="@color/menu"
            android:textSize="36sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/layout_menu_phancong"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/background_item_main"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/ql_phan_cong"
                    android:padding="10dp"
                    android:src="@drawable/menu1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/ql_phan_cong"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_menu_taixe"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/background_item_main"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"

                    android:contentDescription="@string/ql_tai_xe"
                    android:padding="10dp"
                    android:src="@drawable/menu1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/ql_tai_xe"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_menu_tuyen"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/background_item_main"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_menu_taixe">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"

                    android:contentDescription="@string/ql_tuyen_xe"
                    android:padding="10dp"
                    android:src="@drawable/menu1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/ql_tuyen_xe"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_menu_xe"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/background_item_main"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_menu_phancong">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"

                    android:contentDescription="@string/ql_xe"
                    android:padding="10dp"
                    android:src="@drawable/menu1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/ql_xe"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_menu_tinh"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/background_item_main"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_menu_tuyen">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/ql_tinh"
                    android:padding="10dp"
                    android:src="@drawable/menu1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/ql_tinh"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/layout_menu_thongke"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:background="@drawable/background_item_main"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layout_menu_xe">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:contentDescription="@string/ql_tinh"
                    android:padding="10dp"
                    android:src="@drawable/menu1" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:text="@string/thong_ke"
                    android:textColor="@color/colorAccent"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</LinearLayout>